# type-fields

./: Cargo.toml  README.md  TODO
haskell/: algebra.hs  dsl.hs  free-arrow  free-arrow.hi  free-arrow.hs  lattice.hs
src/: cons.rs  field.rs  functional_sdf.rs  lib.rs  macros.rs  path.rs
src/functional/: applicative.rs  bifunctor.rs  category.rs  closure.rs  copointed.rs  foldable.rs  functor.rs  identity.rs  macros.rs  mod.rs  monad.rs  pair.rs  phantom.rs  pointed.rs  state.rs  tagged.rs  traversable.rs
src/functional/applicative/: lift_a2.rs  mod.rs  pure.rs
src/functional/bifunctor/: first.rs  second.rs
src/functional/category/: mod.rs
src/functional/closure/: compose.rs  curry_n.rs  spread.rs
src/functional/foldable/: fold.rs  fold_map.rs  foldr.rs
src/functional/function/: add.rs  compose.rs  constant.rs  curry.rs  curry_n.rs  div.rs  flip.rs  id.rs  mod.rs  mul.rs  replicate_m.rs  sub.rs
src/functional/functor/: emplace.rs  fmap.rs  laws.rs  replace.rs
src/functional/monad/: identity.rs  maybe.rs  mod.rs  pair.rs  state.rs  tagged.rs  then.rs
src/functional/monoid/: endo.rs  mempty.rs  mod.rs
src/functional/semigroup/: all.rs  any.rs  mod.rs  product.rs  sum.rs
src/functional/traversable/: mod.rs  traverse.rs
src/hlist/: mod.rs  path.rs  tuple_impl.rs
src/hlist/cons/: cons_append.rs  cons_applicative.rs  cons_as_mut.rs  (+25 more)
src/t_funk/: copointed.rs  either.rs  lens.rs  macros.rs  mod.rs  peano.rs  pointed.rs
src/type_machine/: action.rs  apply_instructions.rs  apply_instructions_cons.rs  input.rs  mod.rs  output.rs  run_instruction.rs
(+332 files in other folders)
