[package]
name = "type-fields"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
#type-fields-macros = { git = "https://github.com/bevy-rust-gpu/type-fields-macros" }
type-fields-macros = { path = "../type-fields-macros" }

[dependencies]
type-fields-macros = "0.1.0"

# Fast-compile config
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 16
lto = false
incremental = true

# Use opt level 3 for dependencies
[profile.dev.package."*"]
opt-level = 3
